--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .rect {
-	background-color: rgb(0, 121, 191);
+	background-color: #3c8dbc;
 	height: 100%;
 	padding: 7px;
 	border-radius: 4px;
@@ -13,9 +13,67 @@
 	font-weight: 700;
 }
 
-.chatbox {
+.list-tasks {
+	min-height: 100%;
+	background-color: #3c8dbc;
+	padding: 20px 0;
+	border-radius: 10px;
+	border-bottom-right-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.content-tasks {
+	min-height: 100%;
+	background-color: white;
+	padding: 0 5px;
+	border-radius: 10px;
+	border-bottom-left-radius: 0;
+	border-top-left-radius: 0;
+}
+
+
+.list-tasks ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.list-tasks li {
+	height: 50px;
+	padding: 0;
+}
+
+.list-tasks li a {
+    display: block;
+    color: white;
+    font-size: 15px;
+    padding: 8px 0 8px 16px;
+    text-decoration: none;
+    height: 100%;
+}
+
+/* Change the link color on hover */
+.list-tasks li a:hover{
+    background-color: #0d47a1;
+    color: white;
+}
+
+.list-tasks li a:focus{
+    background-color: white;
+    color: #3c8dbc;
+}
+
+.list-tasks li a:active{
+    background-color: #3c8dbc;
+    color: white;
+}
+
+.project-detail {
 	width: 100%;
-	min-height: 300px;
-	border: red 1px;
-	background-color: green;
+	height: 88vh;
+	background-color: #3c8dbc;
+	border: 2px solid #3c8dbc;
+	border-radius: 10px;
+	padding: 0px;
 }
