--- a/css/style.css
+++ b/css/style.css
@@ -54,19 +54,19 @@
 }
 
 /* Change the link color on hover */
-.list-tasks li a:hover{
+.list-tasks li a:hover {
     background-color: #0d47a1;
     color: white;
 }
 
-.list-tasks li a:focus{
+.list-tasks li a:focus {
     background-color: white;
     color: #3c8dbc;
 }
 
-.list-tasks li a:active{
-    background-color: #3c8dbc;
-    color: white;
+.list-tasks li a:active {
+    background-color: white;
+    color: #3c8dbc;
 }
 
 .project-detail {
