--- a/project-detail/project-detail.css
+++ b/project-detail/project-detail.css
@@ -56,12 +56,15 @@
 }
 
 .list-tasks select {
-	width: 100%;
-	height: 300px;
+	width: 97%;
+	height: 370px;
 	background-color: #3c8dbc;
 	color: white;
 	font-size: 20px;
 	border: none;
+	margin-left: 10px;
+	margin-bottom: 10px;
+	margin-top: 28px;
 }
 .project-detail {
 	width: 100%;
